--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "goober": "^2.1.11",
     "headlessui": "^0.0.0",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.2",
+    "react-table": "^7.8.0",
     "webpack": "^5.74.0"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/node": "18.11.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-table": "^7.7.12",
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
