feat: added table search filter

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.2",
     "react-table": "^7.8.0",
+    "regenerator-runtime": "^0.13.10",
     "webpack": "^5.74.0"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-table": "^7.7.12",
+    "@types/regenerator-runtime": "^0.13.1",
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
