--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "heroicons": "^2.0.12",
     "js-cookie": "^3.0.1",
     "next": "12.3.1",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
