feat: added user edit and change password

--- a/package.json
+++ b/package.json
@@ -15,23 +15,27 @@
     "@tailwindcss/forms": "^0.5.3",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "formik": "^2.2.9",
     "goober": "^2.1.11",
     "headlessui": "^0.0.0",
     "heroicons": "^2.0.12",
     "js-cookie": "^3.0.1",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
+    "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.2",
     "react-table": "^7.8.0",
     "regenerator-runtime": "^0.13.10",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.4",
+    "@types/ramda": "^0.28.20",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-table": "^7.7.12",
