feat: added developer page and api keys

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.16.4",
     "ramda": "^0.28.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.2",
@@ -37,6 +38,7 @@
     "@types/node": "18.11.4",
     "@types/ramda": "^0.28.20",
     "@types/react": "18.0.21",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.6",
     "@types/react-table": "^7.7.12",
     "@types/regenerator-runtime": "^0.13.1",
