feat: added claim student record feature

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.2",
     "react-table": "^7.8.0",
     "regenerator-runtime": "^0.13.10",
@@ -40,6 +41,7 @@
     "@types/react": "18.0.21",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.6",
+    "@types/react-modal": "^3.13.1",
     "@types/react-table": "^7.7.12",
     "@types/regenerator-runtime": "^0.13.1",
     "autoprefixer": "^10.4.12",
