--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/forms": "^0.5.3",
+    "compressorjs": "^1.1.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
@@ -22,6 +23,7 @@
     "js-cookie": "^3.0.1",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
+    "nodemailer": "^6.8.0",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
