--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 APP_URL="http://localhost:3000"
-API_URL="http://localhost:9000"
+API_URL="http://docuratorapi.jpmadrigal.com"
+# API_URL="http://localhost:9000"
